fixed some text alignment issues, added links to the profiles pics in the about

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -4,4 +4,5 @@
         min-height: 100vh;
         flex-direction: column;
         justify-content: space-between;
+        background-color: rgb(249, 250, 250);
   }
